Everything is working as expected

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -475,12 +475,12 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1669,15 +1669,15 @@ MRUItem0=/Game/ThirdPerson/Maps/LVL_00
 MRUItem1=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractGrapplePickUp
-MRUItem1=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMaxHealthPickUp
-MRUItem2=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMaxGrapplePickUp
-MRUItem3=/Game/ThirdPerson/Blueprints/Pawn/BP_HealthComponent
-MRUItem4=/Game/ThirdPerson/WBP/GameUI/WBP_GrappleHookAmount
-MRUItem5=/Game/GrappleHookSystem/BP_GrappleHookComponent
-MRUItem6=/Game/ThirdPerson/WBP/GameUI/HealthComponent
-MRUItem7=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenGrappleMaxandBulletAmount
-MRUItem8=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMaxHealthPickUp
+MRUItem1=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMaxGrapplePickUp
+MRUItem2=/Game/ThirdPerson/Blueprints/Pawn/BP_HealthComponent
+MRUItem3=/Game/ThirdPerson/WBP/GameUI/WBP_GrappleHookAmount
+MRUItem4=/Game/GrappleHookSystem/BP_GrappleHookComponent
+MRUItem5=/Game/ThirdPerson/WBP/GameUI/HealthComponent
+MRUItem6=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractGrapplePickUp
+MRUItem7=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem8=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenGrappleMaxandBulletAmount
 MRUItem9=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractHealthRegenPickUp
 MRUItem10=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenHealthandOtto
 MRUItem11=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenRegenandSpeed
@@ -3005,7 +3005,7 @@ EdGraphNode=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collisi
 BillboardComponent=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
 ProgressBar=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray
 WBP_UpgradeScreenGrappleMaxandBulletAmount_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
-BP_GrappleHookComponent_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray
+BP_GrappleHookComponent_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
 BP_InteractGrapplePickUp_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
 WBP_GrappleHookAmount_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
 EdGraphNode_Comment=
