Setting Up Currency Component

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -502,25 +502,28 @@ Overlay="\"Object\" "
 HorizontalBox="\"Object\" "
 WBP_PearlAmount_C="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
+BP_CurrencyComponent_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Cascade
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -533,16 +536,14 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenRegenandSpeed.WBP_UpgradeScreenRegenandSpeed
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD.WBP_WaveModeHUD
+OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenParent.WBP_UpgradeScreenParent
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_HealthComponent.BP_HealthComponent
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_PearlsPickUp.BP_PearlsPickUp
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/InGameScreen.InGameScreen
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/BP_ConeEnemy.BP_ConeEnemy
 OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_PearlAmount.WBP_PearlAmount
+OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_GrappleHookAmount.WBP_GrappleHookAmount
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_CurrencyComponent.BP_CurrencyComponent
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1708,36 +1709,36 @@ MRUItem0=/Game/ThirdPerson/Maps/LVL_00
 MRUItem1=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem1=/Game/ThirdPerson/WBP/GameUI/WBP_PearlAmount
-MRUItem2=/Game/ThirdPerson/Blueprints/AI/BP_ConeEnemy
-MRUItem3=/Engine/Functions/Engine_MaterialFunctions02/ExampleContent/3dParticleOpacity_Particle
-MRUItem4=/Game/ThirdPerson/Material/MI_Crystal
-MRUItem5=/Game/ThirdPerson/Material/M_Crystal
-MRUItem6=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_PearlsPickUp
-MRUItem7=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
-MRUItem8=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenRegenandSpeed
-MRUItem9=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
-MRUItem10=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenGrappleMaxandBulletAmount
-MRUItem11=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractGrapplePickUp
-MRUItem12=/Game/ThirdPerson/WBP/GameUI/HealthComponent
-MRUItem13=/Game/ThirdPerson/WBP/GameUI/WBP_GrappleHookAmount
-MRUItem14=/Game/GrappleHookSystem/BP_GrappleHookComponent
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem16=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMaxHealthPickUp
-MRUItem17=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMaxGrapplePickUp
-MRUItem18=/Game/ThirdPerson/Blueprints/Pawn/BP_HealthComponent
-MRUItem19=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractHealthRegenPickUp
-MRUItem20=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenHealthandOtto
-MRUItem21=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem22=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractIncreaseProjectilePickUp
-MRUItem23=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMovementSpeedPickUp
-MRUItem24=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractSpeedPickUp
-MRUItem25=/Game/ThirdPerson/Blueprints/Abilities/BP_Ottomatic
-MRUItem26=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
-MRUItem27=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenParent
-MRUItem28=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractSlowSpell
-MRUItem29=/Game/ThirdPerson/Blueprints/Abilities/BP_SlowSpell
+MRUItem0=/Game/ThirdPerson/Blueprints/Pawn/BP_HealthComponent
+MRUItem1=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenParent
+MRUItem2=/Game/ThirdPerson/Blueprints/Pawn/BP_CurrencyComponent
+MRUItem3=/Game/ThirdPerson/WBP/GameUI/WBP_GrappleHookAmount
+MRUItem4=/Game/ThirdPerson/WBP/GameUI/WBP_PearlAmount
+MRUItem5=/Game/ThirdPerson/Blueprints/AI/BP_ConeEnemy
+MRUItem6=/Game/ThirdPerson/WBP/GameUI/InGameScreen
+MRUItem7=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_PearlsPickUp
+MRUItem8=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
+MRUItem9=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenRegenandSpeed
+MRUItem10=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem11=/Engine/Functions/Engine_MaterialFunctions02/ExampleContent/3dParticleOpacity_Particle
+MRUItem12=/Game/ThirdPerson/Material/MI_Crystal
+MRUItem13=/Game/ThirdPerson/Material/M_Crystal
+MRUItem14=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenGrappleMaxandBulletAmount
+MRUItem15=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractGrapplePickUp
+MRUItem16=/Game/ThirdPerson/WBP/GameUI/HealthComponent
+MRUItem17=/Game/GrappleHookSystem/BP_GrappleHookComponent
+MRUItem18=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem19=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMaxHealthPickUp
+MRUItem20=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMaxGrapplePickUp
+MRUItem21=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractHealthRegenPickUp
+MRUItem22=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenHealthandOtto
+MRUItem23=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem24=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractIncreaseProjectilePickUp
+MRUItem25=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractMovementSpeedPickUp
+MRUItem26=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractSpeedPickUp
+MRUItem27=/Game/ThirdPerson/Blueprints/Abilities/BP_Ottomatic
+MRUItem28=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
+MRUItem29=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractSlowSpell
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -2986,6 +2987,15 @@ K2Node_InputDebugKey.Modifier=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+BP_CurrencyComponent_C.ComponentTick=True
+BP_CurrencyComponent_C.Default=True
+BP_CurrencyComponent_C.Tags=True
+BP_CurrencyComponent_C.ComponentReplication=True
+BP_CurrencyComponent_C.Activation=True
+BP_CurrencyComponent_C.Variable=True
+BP_CurrencyComponent_C.Cooking=True
+BP_CurrencyComponent_C.Sockets=True
+BP_CurrencyComponent_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
@@ -3033,6 +3043,7 @@ K2Node_FunctionResult.Outputs=True
 /Engine/Functions/Engine_MaterialFunctions02/ExampleContent/3dParticleOpacity_Particle.3dParticleOpacity_Particle=0
 /Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_PearlsPickUp.BP_PearlsPickUp=0
 /Game/ThirdPerson/WBP/GameUI/WBP_PearlAmount.WBP_PearlAmount=0
+/Game/ThirdPerson/Blueprints/Pawn/BP_CurrencyComponent.BP_CurrencyComponent=0
 
 [PluginBrowser]
 InstalledPlugins=WaterPhysics
@@ -3172,11 +3183,11 @@ NavMeshBoundsVolume=WaterBodyOcean.Collision.Collision
 BrushComponent=WaterBodyOcean.Collision.Collision
 BP_InteractMaxHealthPickUp_C=WaterBodyOcean.Collision.Collision
 K2Node_VariableGet=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
-BP_HealthComponent_C=
+BP_HealthComponent_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
 K2Node_VariableSet=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
 PropertyWrapper=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
 K2Node=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray
-MulticastInlineDelegatePropertyWrapper=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
+MulticastInlineDelegatePropertyWrapper=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
 HealthComponent_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
 WBP_UpgradeScreen_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision
 WBP_WaveModeHUD_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
@@ -3187,7 +3198,7 @@ BP_InteractIncreaseProjectilePickUp_C=WaterBodyOcean.Collision.Collision,BP_Thir
 ABP_Quinn_C=
 EdGraph=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
 K2Node_FunctionEntry=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray
-K2Node_Variable=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
+K2Node_Variable=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
 BP_InteractMovementSpeedPickUp_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,CapsuleComponent.Collision.Collision
 Character=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
 K2Node_CallFunction=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
@@ -3209,6 +3220,7 @@ Actor=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Col
 PrimitiveComponent=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray
 WBP_PearlAmount_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
 K2Node_FunctionResult=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
+BP_CurrencyComponent_C=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3519,6 +3531,7 @@ PreserveScaleRatio=False
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteConfirmationVariable_Warning=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
