Have a restart game bug with mouse, will be trying to just have ranged attacks now.

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -245,8 +245,8 @@ DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 InputAction="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 K2Node_InputAction="\"Object\" "
@@ -3361,7 +3361,7 @@ WaterPhysics_GenericWaterBody=WaterBodyOcean.Collision.Collision
 SceneComponent=
 WaterZone=WaterBodyOcean.Collision.Collision
 BP_ThirdPersonCharacter_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
-SkeletalMeshComponent=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,WaterBodyOcean.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
+SkeletalMeshComponent=
 K2Node_CustomEvent=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,WaterBodyOcean.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 Landscape=WaterBodyOcean.Collision.Collision
