--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=0,Y=0)
+NewWindowPosition=(X=1920,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -124,15 +124,15 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1968,Y=990)
+LastSize=(X=1914,Y=999)
 LastExecutedLaunchDevice=Windows@DESKTOP-D8R35MC
 LastExecutedLaunchName=DESKTOP-D8R35MC
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1968
-NewWindowHeight=990
-MultipleInstancePositions=(X=0,Y=0)
+NewWindowWidth=1914
+NewWindowHeight=999
+MultipleInstancePositions=(X=1920,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -3583,8 +3583,8 @@ CapsuleComponent=
 WaterPhysics_GenericWaterBody=WaterBodyOcean.Collision.Collision
 SceneComponent=
 WaterZone=WaterBodyOcean.Collision.Collision
-BP_ThirdPersonCharacter_C=
-SkeletalMeshComponent=
+BP_ThirdPersonCharacter_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
+SkeletalMeshComponent=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
 K2Node_CustomEvent=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,WaterBodyOcean.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 Landscape=WaterBodyOcean.Collision.Collision
