--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -84,7 +84,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="UseHealthPickUps",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
-+AxisMappings=(AxisName="WaterSlash",Scale=1.000000,Key=LeftMouseButton)
++AxisMappings=(AxisName="Attack1",Scale=1.000000,Key=LeftMouseButton)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
